ht access issue fixed

--- a/.htaccess
+++ b/.htaccess
@@ -2,71 +2,60 @@
 RewriteEngine On
 RewriteBase /
 
-# ==================== BLOG CLEAN URLS - MUST BE FIRST ====================
-# Step 1: Skip WordPress processing for blog HTML files
-RewriteCond %{REQUEST_URI} ^/blogs\.html$ [OR]
-RewriteCond %{REQUEST_URI} ^/blog-detail\.html$
-RewriteRule ^ - [L]
+# ==================== REDIRECT www → non-www ====================
+RewriteCond %{HTTP_HOST} ^www\.viralcatmeow\.com$ [NC]
+RewriteRule ^(.*)$ https://viralcatmeow.com/$1 [R=301,L]
 
-# Step 2: Rewrite /blogs → /blogs.html (WITHOUT .html stripping)
+# ==================== REDIRECT index.html → / ====================
+RewriteCond %{THE_REQUEST} \s/+index\.html[\s?]
+RewriteRule ^index\.html$ / [R=301,L]
+
+# ==================== EXPLICITLY REDIRECT blogs.html AND blog-detail.html ====================
+RewriteCond %{THE_REQUEST} \s/+blogs\.html[\s?]
+RewriteRule ^blogs\.html$ /blogs [R=301,L]
+
+RewriteCond %{THE_REQUEST} \s/+blog-detail\.html[\s?]
+RewriteRule ^blog-detail\.html$ /blog-detail [R=301,L]
+
+# ==================== REDIRECT .html → clean URLs ====================
+RewriteCond %{THE_REQUEST} \s/+(.+?)\.html[\s?]
+RewriteCond %{REQUEST_URI} !^/blog/ [NC]
+RewriteRule ^(.+?)\.html$ /$1 [R=301,L]
+
+# ==================== BLOG CLEAN URLS ====================
+# /blogs → /blogs.html (internal rewrite)
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^blogs/?$ /blogs.html [L,NC]
 
-# Step 3: Rewrite /blog-detail/slug → /blog-detail.html?slug=slug
+# /blog-detail/slug → /blog-detail.html?slug=slug (internal rewrite)
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_URI} !^/blog/ [NC]
 RewriteRule ^blog-detail/([^/]+)/?$ /blog-detail.html?slug=$1 [L,QSA,NC]
 
-# ==================== WORDPRESS RULES FOR /blog DIRECTORY ====================
+# ==================== WORDPRESS /blog DIRECTORY ====================
 RewriteRule ^blog/index\.php$ - [L]
 
-# ✅ FIX: Check if /blog/something corresponds to a real HTML file in root
-# If /blog/google-ads exists as /google-ads.html, serve it
-RewriteCond %{REQUEST_URI} ^/blog/(.+)$
-RewriteCond %{DOCUMENT_ROOT}/%1.html -f
-RewriteRule ^blog/(.+)$ /$1 [R=301,L]
+# If /blog/slug matches a root-level HTML file, redirect to clean URL
+RewriteCond %{DOCUMENT_ROOT}/$1.html -f
+RewriteRule ^blog/([^/]+)/?$ /$1 [R=301,L]
 
-# WordPress fallback - only if file doesn't exist in root
+# WordPress fallback
 RewriteCond %{REQUEST_URI} ^/blog/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^blog/ /blog/index.php [L]
 
-# ==================== GENERAL SITE RULES ====================
-# Redirect www → non-www
-RewriteCond %{HTTP_HOST} ^www\.viralcatmeow\.com$ [NC]
-RewriteRule ^(.*)$ https://viralcatmeow.com/$1 [R=301,L]
-
-# Redirect /index.html → /
-RewriteCond %{THE_REQUEST} /index\.html
-RewriteRule ^index\.html$ / [R=301,L]
-
-# ✅ FIX: Redirect .html → clean URLs (SKIP blogs.html, blog-detail.html, AND any /blog/ paths)
-RewriteCond %{THE_REQUEST} \s/+(.+?)\.html[\s?]
-RewriteCond %{REQUEST_URI} !^/blogs\.html$
-RewriteCond %{REQUEST_URI} !^/blog-detail\.html$
-RewriteCond %{REQUEST_URI} !^/blog/ [NC]
-RewriteRule ^(.+?)\.html$ /$1 [R=301,L]
-
-# ✅ FIX: Serve clean URLs internally (SKIP blog files AND /blog/ directory)
+# ==================== GENERAL CLEAN URL SERVING ====================
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME}\.html -f
-RewriteCond %{REQUEST_URI} !^/blogs$
-RewriteCond %{REQUEST_URI} !^/blog-detail/
+RewriteCond %{REQUEST_URI} !^/blogs [NC]
+RewriteCond %{REQUEST_URI} !^/blog-detail [NC]
 RewriteCond %{REQUEST_URI} !^/blog/ [NC]
 RewriteRule ^([^/]+)/?$ $1.html [L]
 
-# Career Page Routing
-RewriteEngine On
-RewriteBase /
-
-# Route /careers to static HTML page
+# ==================== CAREERS ====================
 RewriteRule ^careers/?$ /career.html [L]
-
-# Route WordPress blog
-RewriteRule ^blog/(.*)$ /blog/$1 [L]
 
 </IfModule>
